--- a/sysmologic123/src/App.css
+++ b/sysmologic123/src/App.css
@@ -3,6 +3,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Khula:wght@300;400;600;700;800&display=swap');
 html{
   font-size: 62.5%;
+  scroll-behavior: smooth;
 }
 *{
   margin: 0;
@@ -54,7 +55,7 @@ body{
     --seconddiv-multiply: 1 !important ;
     --about-multiply: 0.9 !important ;
     --service-muliple: 0.9 !important ;
-    --project-multiply: 0.8 !important ;
+    --project-multiply: 0.7 !important ;
     --price-multiply: 0.8 !important ;
     --client-multiply: 0.8 !important ;
     --team-multiply: 0.8 !important ;
@@ -76,7 +77,7 @@ body{
     --seconddiv-multiply: 1.05 !important;
     --about-multiply: 0.95 !important;
     --service-muliple: 0.95 !important;
-    --project-multiply: 0.85 !important;
+    --project-multiply: 0.75 !important;
     --price-multiply: 0.85 !important;
     --client-multiply: 0.85 !important;
     --team-multiply: 0.85 !important;
@@ -98,7 +99,7 @@ body{
     --seconddiv-multiply: 1.7 !important;
     --about-multiply: 1.6 !important;
     --service-muliple: 1.6 !important;
-    --project-multiply: 1.5 !important;
+    --project-multiply: 1.4 !important;
     --price-multiply: 1.5 !important;
     --client-multiply: 1.5 !important;
     --team-multiply: 1.5 !important;
@@ -121,7 +122,7 @@ body{
     --seconddiv-multiply: 2.6 !important;
     --about-multiply: 2.6 !important;
     --service-muliple: 2.6 !important;
-    --project-multiply: 2.3 !important;
+    --project-multiply: 2.1 !important;
     --price-multiply: 2.6 !important;
     --client-multiply: 2.6 !important;
     --team-multiply: 2.6 !important;
