--- a/sysmologic123/src/components/clients/Clients.css
+++ b/sysmologic123/src/components/clients/Clients.css
@@ -9,16 +9,19 @@
     align-items: center;
     column-gap: calc(7rem*var(--client-multiply));
 }
-.clients-left{
-    width: calc(51.2rem*var(--client-multiply));
+/* .clients-left{
+    width: 90vw;
     height: calc(58.2rem*var(--client-multiply));
 }
 .clients-left img{
     width: calc(51.2rem*var(--client-multiply));
     height: calc(58.2rem*var(--client-multiply));
+} */
+.clients-right{
+    width: 90vw;
 }
 .clients-right h1{
-    font-size: calc(4.1rem*var(--client-multiply));
+    font-size: calc(6rem*var(--client-multiply));
     color: #333333;
     margin-bottom: calc(2.5rem*var(--client-multiply));
 }
@@ -26,7 +29,7 @@
     font-family: 'Montserrat';
 font-style: normal;
 font-weight: 400;
-font-size: calc(1.8rem*var(--client-multiply));
+font-size: calc(2.5rem*var(--client-multiply));
 line-height: 160%;
 
 /* or 29px */
@@ -34,6 +37,11 @@ line-height: 160%;
 color: #000000;
 
 opacity: 0.7;
+}
+.reviews{
+    padding: calc(2rem*var(--client-multiply));
+    margin-bottom: calc(5rem*var(--client-multiply));
+    box-shadow: 0px 0px calc(1.5rem*var(--seconddiv-multiply)) rgba(253, 98, 12, 0.08);
 }
 .c-name{
     margin-top: calc(2.5rem*var(--client-multiply));
@@ -63,7 +71,7 @@ color: #000000;
 }
 .rating p{
     font-weight: 400;
-font-size: calc(1.8rem*var(--client-multiply));
+font-size: calc(2.5rem*var(--client-multiply));
 line-height: calc(2.7rem*var(--client-multiply));
 }
 .stars{
@@ -71,8 +79,8 @@ line-height: calc(2.7rem*var(--client-multiply));
     column-gap: calc(0.5rem*var(--client-multiply));
 }
 .stars img{
-    width: calc(1.4rem*var(--client-multiply));
-    height: calc(1.4rem*var(--client-multiply));
+    width: calc(3rem*var(--client-multiply));
+    height: calc(3rem*var(--client-multiply));
 }
 
 .arr{
@@ -144,6 +152,10 @@ line-height: calc(2.7rem*var(--client-multiply));
     .arr{
         column-gap: 1.5rem;
     }
+    .stars img{
+        width: 1rem;
+        height: 1rem;
+    }
 }
 @media (min-width:600px) and (max-width: 1000px) {
     .clients-con{
@@ -193,6 +205,10 @@ line-height: calc(2.7rem*var(--client-multiply));
     .stars img{
         width: 5vw;
         height: 2vh;
+    }
+    .stars img{
+        width: 2.5rem;
+        height: 2.5rem;
     }
 }
 /* @media (min-width: 1000px) and (max-width: 1300px)  {
