--- a/sysmologic123/src/components/navbar/navbar.css
+++ b/sysmologic123/src/components/navbar/navbar.css
@@ -16,7 +16,11 @@
     align-items: center;
 
 }
-.nav-headings button{
+.nav-btn{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
     border: none;
     background-color: #FE9151;
     color: #FFFFFF;
@@ -41,6 +45,8 @@
     display: inline-block;
     position: relative;
     width: fit-content;
+    transition: all 0.7s ease-in-out;
+    scroll-behavior: smooth;
     
   
       
